add custom error pages for few statuses

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=7777
 spring.mandatory-file-encoding=UTF-8
-
+server.error.whitelabel.enabled=false
 #Data Base
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
