update security to use sequence of sha1->bcrypt(crypto-labs-5)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.data.jpa.repositories.enabled=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Replace with your connection string
-spring.datasource.url=jdbc:postgresql://localhost:5432/mylib
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 
 # Replace with your credentials
 spring.datasource.username=postgres
