--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,14 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>1.2.7.RELEASE</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
