--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
 # Enable spring data repos
 spring.data.jpa.repositories.enabled=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
 # Replace with your connection string
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/lib
 
 # Replace with your credentials
 spring.datasource.username=postgres
